Bugfix: Code blocks no longer overlap with aligned images

--- a/_sass/base/_syntax.scss
+++ b/_sass/base/_syntax.scss
@@ -112,6 +112,8 @@ div[class^='language-'] {
   @extend %code-snippet-bg;
 
   box-shadow: var(--language-border-color) 0 0 0 1px;
+  overflow-x: auto;
+  display: flow-root;
 
   .content > & {
     @include mx.ml-mr(-1rem);
